--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,7 +1,7 @@
 [theme]
-base = "dark"
-primaryColor = "#C4A265"
-backgroundColor = "#0D0D0E"
-secondaryBackgroundColor = "#1A1A1A"
-textColor = "#E8E8E8"
+base = "light"
+primaryColor = "#2563EB"
+backgroundColor = "#FFFFFF"
+secondaryBackgroundColor = "#F8FAFC"
+textColor = "#111111"
 font = "sans serif"
